--- a/templates/contexto.html
+++ b/templates/contexto.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <h1>Avaliação contínua: Aula 030</h1>
-    <p>Seu navegador é: {{ user_agent }}</p>
-    <p>O IP do computador remoto é: {{ ip_address }}</p>
-    <p>O host da aplicação é: {{ host }}</p>
-    <a href="/">Voltar</a>
+    <h1>Seu navegador é: {{ user_agent }}</h1>
+    <h1>O IP do computador remoto é: {{ ip_address }}</h1>
+    <h1>O host da aplicação é: {{ host }}</h1>
+    <h1><a href="/">Voltar</a></h1>
 </body>
 </html>
