--- a/templates/identificacao.html
+++ b/templates/identificacao.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <h1>Avaliação contínua: Aula 030</h1>
-    <p>Aluno: Gabriele de Barros Oliveira</p>
-    <p>Prontuário: PT3026787</p>
-    <p>Instituição: IFSP</p>
-    <a href="/">Voltar</a>
+    <h1>Aluno: Gabriele de Barros Oliveira</h1>
+    <h1>Prontuário: PT3026787</h1>
+    <h1>Instituição: IFSP</h1>
+    <h1><a href="/">Voltar</a></h1>
 </body>
 </html>
