--- a/templates/index.html
+++ b/templates/index.html
@@ -6,11 +6,11 @@
     <title>Avaliação contínua: Aula 030</title>
 </head>
 <body>
-    <h1>Avaliação contínua: Aula 030
+    <h1>Avaliação contínua: Aula 030</h1>
     <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/identificacao">Identificação</a></li>
         <li><a href="/contextorequisicao">Contexto da requisição</a></li>
-    </ul></h1>
+    </ul>
 </body>
 </html>
